* process.c (rb_run_exec_options_err): restore save_env() call for   non-fork environments.

* process.c (rb_exec_err): restore environments after the failure of
  exec to fix [ruby-core:44093] [Bug #6249] on non-fork environments


git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@35897 b2dd03c8-39d4-4d8f-98ff-823fe69b080e